# project-mental-model

./: .gitignore  PUBLISHING.md  README.md  README.zh-CN.md  SKILL.md  bootstrap.md  memory-bar-examples.md
.github/workflows/: publish.yml
templates/: MEMORY.md  ai-actions.md  bootstrap-verify.sh  current-state.md  inject.js  memory-gatekeeper.md  pmm-capture-detect.js  pmm-staleness-detect.sh  pmm.md  settings.snippet.json
tools/codegraph/: .gitignore  LICENSE  README.md  cache.py  cli.py  extract.py  graph.py  install.py  langs.py  pyproject.toml  render.py
